# Research-Magnet

./: .gitignore  PHASE2_README.md  PHASE4_README.md  README.md  alembic.ini  env.sample  example_enrichment.py  example_phase4.py  pyproject.toml  scope.md
alembic/: env.py
alembic/versions/: 64e30457f0f5_initial_migration_create_all_tables.py
app/: __init__.py  cli.py  config.py  db.py  main.py  models.py  schemas.py
app/analyze/: __init__.py  cluster.py  trend.py
app/enrich/: __init__.py  embed.py  nlp.py  normalize.py  sentiment.py
app/export/: __init__.py
app/ingestion/: __init__.py  gnews_source.py  hackernews_source.py  reddit_source.py
app/nlp/: __init__.py
app/rank/: __init__.py
app/routers/: __init__.py  cluster.py  enrichment.py  export.py  health.py  ingestion.py  ranking.py  research.py  sources.py  trending.py
app/services/: __init__.py  export_service.py  ingestion_service.py  research_service.py  source_service.py
app/tests/: __init__.py  test_cluster.py  test_enrich.py  test_scoring.py  test_trend.py
app/utils/: __init__.py  logging.py  scoring.py  time_decay.py
